# zendesk_sell_firehose_client

./: CODEOWNERS  pyproject.toml  requirements.txt  setup.cfg
src/zendesk_sell_firehose_client_strongmind/: __init__.py  resources.py
tests/: test_client.py  test_resources.py
tests/factories/: zendesk_factories.py
